--- a/10.heatshock_test/heatshock_test.html
+++ b/10.heatshock_test/heatshock_test.html
@@ -34,7 +34,7 @@
         <input type="number" class="form-control" id="diameterKabel" oninput="updatePerkalian()" placeholder="mm">
       </div>
       <div class="flex-fill">
-        <label for="manrel" class="form-label fw-bold">Manrel yang Dipakai</label>
+        <label for="manrel" class="form-label fw-bold">Mandrel yang Dipakai</label>
         <input type="text" class="form-control" id="manrel" readonly>
       </div>
     </div>
