--- a/404.html
+++ b/404.html
@@ -140,7 +140,7 @@
       Kabelnya belum terhubung!<br>
       <span style="font-size:0.97em; color:#fdcb6e;">Coba kembali ke beranda, atau pilih project yang sudah ada.</span>
     </div>
-    <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Kembali ke Beranda</a>
+    <a href=".//index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Kembali ke Beranda</a>
   </div>
   <div class="footer-404">
     Made by Williyanto Adi 2025
