--- a/9.coldbending_test/coldbending_test.html
+++ b/9.coldbending_test/coldbending_test.html
@@ -34,7 +34,7 @@
         <input type="number" class="form-control" id="diameterKabel" oninput="updatePerkalian()" placeholder="mm">
       </div>
       <div class="flex-fill">
-        <label for="mandrel" class="form-label fw-bold">Mandrel yang Dipakai</label>
+        <label for="mandrel" class="form-label fw-bold">Ukuran Mandrel</label>
         <input type="text" class="form-control" id="mandrel" readonly>
       </div>
     </div>
