--- a/10.heatshock_test/heatshock_test.html
+++ b/10.heatshock_test/heatshock_test.html
@@ -67,7 +67,7 @@
     <!-- Tombol Navigasi -->
     <div class="d-flex justify-content-center gap-3 mt-4">
       <button onclick="history.back()" class="btn btn-outline-secondary">🔙 Kembali</button>
-      <a href="/index.html" class="btn btn-outline-primary">🏠 Beranda</a>
+      <a href="../index.html" class="btn btn-outline-primary">🏠 Beranda</a>
       <a href="../9.coldbending_test/coldbending_test.html" class="btn btn-outline-info">❄️ Cold Bending</a>
     </div>
 
