--- a/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
+++ b/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
@@ -66,12 +66,12 @@
         </select>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-6">
         <label for="diameterKonduktor" class="form-label">Diameter Konduktor (mm)</label>
         <input type="number" class="form-control" id="diameterKonduktor" />
       </div>
 
-      <div class="col-md-6">
+      <div class="col-6">
         <label for="diameterKabel" class="form-label">Diameter Kabel (mm)</label>
         <input type="number" class="form-control" id="diameterKabel" />
       </div>
