--- a/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
+++ b/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
@@ -50,7 +50,7 @@
       </div>
       
       <div class="row g-3">
-      <div class="col-md-6">
+      <div class="col-6">
         <label for="tipeKabel" class="form-label">Tipe Kabel</label>
         <select id="tipeKabel" class="form-select">
           <option value="lead">Dengan Lead Sheath/Lapisan Logam</option>
@@ -58,7 +58,7 @@
         </select>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-6">
         <label for="jumlahInti" class="form-label">Jumlah Inti</label>
         <select id="jumlahInti" class="form-select">
           <option value="tunggal">Inti Tunggal</option>
