--- a/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
+++ b/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
@@ -95,9 +95,12 @@
         <p class="formula-text"><strong>Formula:</strong> <span id="formulaText"></span></p>
       </div>
 
-      <div class="col-12 text-center mt-4 mb-3">
-        <button type="button" class="btn btn-secondary btn-custom" onclick="goBack()">Kembali</button>
-        <button type="button" class="btn btn-primary btn-custom" onclick="goHome()">Beranda</button>
+      <div class="col-6 text-center mt-4 mb-3">
+        <button type="button" class="btn btn-secondary btn-custom w-100" onclick="goBack()">Kembali</button>
+      </div>
+
+      <div class="col-6 text-center mt-4 mb-3">
+        <button type="button" class="btn btn-primary btn-custom w-100" onclick="goHome()">Beranda</button>
       </div>
 
       <div class="col-12">
