--- a/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
+++ b/8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kalkulator Radius Tekukan</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -19,12 +19,9 @@
       font-weight: bold;
     }
     .content-border {
-      border: 2px solid #dee2e6;
-      border-radius: 10px;
       padding: 2rem;
-      margin: 1rem;
+      margin: 1rem 0;
       background-color: #f8f9fa;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     .header-line {
       border-bottom: 2px solid #dee2e6;
@@ -33,81 +30,104 @@
     }
     .footer-line {
       border-top: 2px solid #dee2e6;
-      padding-top: 1rem;
-      margin-top: 2rem;
+      padding-top: 0.5rem;
+      margin-top: 1rem;
     }
     .btn-custom {
       margin: 0 10px;
       min-width: 120px;
     }
+
+    /* Pertahankan tampilan desktop di mobile */
+    @media (max-width: 768px) {
+      .row-cols-2 > .col {
+        flex: 0 0 50%;
+        max-width: 50%;
+      }
+      .row-cols-3 > .col {
+        flex: 0 0 33.3333%;
+        max-width: 33.3333%;
+      }
+    }
   </style>
 </head>
-<body>
-  <div class="container mt-5 mb-5">
+<body style="background-color: #f1f3f5;">
+  <div class="container mt-5 mb-5 px-2 px-md-4">
     <div class="content-border">
       <div class="header-line">
         <h2 class="text-center mb-0">Kalkulator Radius Tekukan</h2>
       </div>
-      
-      <div class="row g-3">
-      <div class="col-6">
-        <label for="tipeKabel" class="form-label">Tipe Kabel</label>
-        <select id="tipeKabel" class="form-select">
-          <option value="lead">Dengan Lead Sheath/Lapisan Logam</option>
-          <option value="lain">Kabel Lain</option>
-        </select>
+
+      <!-- Input Fields -->
+      <div class="row row-cols-2 g-3">
+        <div class="col">
+          <label for="tipeKabel" class="form-label">Tipe Kabel</label>
+          <select id="tipeKabel" class="form-select">
+            <option value="lead">Dengan Lead Sheath/Lapisan Logam</option>
+            <option value="lain">Kabel Lain</option>
+          </select>
+        </div>
+
+        <div class="col">
+          <label for="jumlahInti" class="form-label">Jumlah Inti</label>
+          <select id="jumlahInti" class="form-select">
+            <option value="tunggal">Inti Tunggal</option>
+            <option value="tiga">Tiga Inti</option>
+          </select>
+        </div>
+
+        <div class="col">
+          <label for="diameterKonduktor" class="form-label">Diameter Konduktor (mm)</label>
+          <input type="number" class="form-control" id="diameterKonduktor" />
+        </div>
+
+        <div class="col">
+          <label for="diameterKabel" class="form-label">Diameter Kabel (mm)</label>
+          <input type="number" class="form-control" id="diameterKabel" />
+        </div>
       </div>
 
-      <div class="col-6">
-        <label for="jumlahInti" class="form-label">Jumlah Inti</label>
-        <select id="jumlahInti" class="form-select">
-          <option value="tunggal">Inti Tunggal</option>
-          <option value="tiga">Tiga Inti</option>
-        </select>
+      <!-- Output Results -->
+      <div class="row row-cols-3 g-3 mt-2">
+        <div class="col">
+          <label class="form-label">Min. Radius Tekukan (mm)</label>
+          <input type="text" class="form-control result-value" id="minRadius" readonly />
+        </div>
+        <div class="col">
+          <label class="form-label">Nom. Radius Tekukan (mm)</label>
+          <input type="text" class="form-control result-value" id="nomRadius" readonly />
+        </div>
+        <div class="col">
+          <label class="form-label">Max. Radius Tekukan (mm)</label>
+          <input type="text" class="form-control result-value" id="maxRadius" readonly />
+        </div>
       </div>
 
-      <div class="col-6">
-        <label for="diameterKonduktor" class="form-label">Diameter Konduktor (mm)</label>
-        <input type="number" class="form-control" id="diameterKonduktor" />
+      <!-- Formula Info -->
+      <div class="row mt-2">
+        <div class="col">
+          <p class="formula-text"><strong>Formula:</strong> <span id="formulaText"></span></p>
+        </div>
       </div>
 
-      <div class="col-6">
-        <label for="diameterKabel" class="form-label">Diameter Kabel (mm)</label>
-        <input type="number" class="form-control" id="diameterKabel" />
+      <!-- Buttons -->
+      <div class="row row-cols-2 g-3 mt-3">
+        <div class="col text-center">
+          <button type="button" class="btn btn-outline-secondary btn-custom rounded-pill w-100" onclick="goBack()">Kembali</button>
+        </div>
+        <div class="col text-center">
+          <button type="button" class="btn btn-primary btn-custom rounded-pill w-100" onclick="goHome()">Beranda</button>
+        </div>
       </div>
 
-      <div class="col-4">
-        <label class="form-label">Min. Radius Tekukan (mm)</label>
-        <input type="text" class="form-control result-value" id="minRadius" readonly />
-      </div>
-
-      <div class="col-4">
-        <label class="form-label">Nom. Radius Tekukan (mm)</label>
-        <input type="text" class="form-control result-value" id="nomRadius" readonly />
-      </div>
-
-      <div class="col-4">
-        <label class="form-label">Max. Radius Tekukan (mm)</label>
-        <input type="text" class="form-control result-value" id="maxRadius" readonly />
-      </div>
-
-      <div class="col-md-12">
-        <p class="formula-text"><strong>Formula:</strong> <span id="formulaText"></span></p>
-      </div>
-
-      <div class="col-6 text-center mt-4 mb-3">
-        <button type="button" class="btn btn-secondary btn-custom w-100" onclick="goBack()">Kembali</button>
-      </div>
-
-      <div class="col-6 text-center mt-4 mb-3">
-        <button type="button" class="btn btn-primary btn-custom w-100" onclick="goHome()">Beranda</button>
-      </div>
-
-      <div class="col-12">
-        <div class="footer-line">
-          <footer class="text-center text-muted">
-            Williyanto Adi 2025
-          </footer>
+      <!-- Footer -->
+      <div class="row mt-3">
+        <div class="col">
+          <div class="footer-line">
+            <footer class="text-center text-muted">
+              Williyanto Adi 2025
+            </footer>
+          </div>
         </div>
       </div>
     </div>
@@ -129,40 +149,40 @@
       const tipe = tipeKabel.value;
       const inti = jumlahInti.value;
 
+      if (!d || !D) {
+        minRadius.value = "";
+        maxRadius.value = "";
+        nomRadius.value = "";
+        formulaText.innerHTML = "";
+        return;
+      }
+
       let faktor = 0;
-      let min = 0;
-      let max = 0;
       let formula = "";
 
       if (tipe === "lead" && inti === "tunggal") {
         faktor = 25;
-        min = (d + D - 0.05 * (d + D)) * faktor;
-        max = (d + D + 0.05 * (d + D)) * faktor;
         formula = "25 (d + D) ± 5%";
       } else if (tipe === "lead" && inti === "tiga") {
         faktor = 20;
-        min = (d + D - 0.05 * (d + D)) * faktor;
-        max = (d + D + 0.05 * (d + D)) * faktor;
         formula = "20 (d + D) ± 5%";
       } else if (tipe === "lain" && inti === "tunggal") {
         faktor = 20;
-        min = (d + D - 0.05 * (d + D)) * faktor;
-        max = (d + D + 0.05 * (d + D)) * faktor;
-        formula = "20 (d + D ) ± 5%";
+        formula = "20 (d + D) ± 5%";
       } else if (tipe === "lain" && inti === "tiga") {
         faktor = 15;
-        min = (d + D - 0.05 * (d + D)) * faktor;
-        max = (d + D + 0.05 * (d + D)) * faktor;
         formula = "15 (d + D) ± 5%";
       }
 
+      const base = d + D;
+      const min = (base - 0.05 * base) * faktor;
+      const max = (base + 0.05 * base) * faktor;
       const nom = (min + max) / 2;
 
-      minRadius.value = min ? min.toFixed(0) : "";
-      maxRadius.value = max ? max.toFixed(0) : "";
-      nomRadius.value = nom ? nom.toFixed(0) : "";
-
-      formulaText.innerHTML = formula ? `<span>${formula}</span>` : "";
+      minRadius.value = min.toFixed(0);
+      maxRadius.value = max.toFixed(0);
+      nomRadius.value = nom.toFixed(0);
+      formulaText.innerHTML = `<span>${formula}</span>`;
     }
 
     tipeKabel.addEventListener("change", hitungRadius);
@@ -170,18 +190,15 @@
     diameterKonduktor.addEventListener("input", hitungRadius);
     diameterKabel.addEventListener("input", hitungRadius);
 
-    // Fungsi untuk tombol navigasi
     function goBack() {
       if (window.history.length > 1) {
         window.history.back();
       } else {
-        // Jika tidak ada history, redirect ke halaman utama atau tampilkan pesan
         alert("Tidak ada halaman sebelumnya untuk dikunjungi");
       }
     }
 
     function goHome() {
-      // Ganti URL ini sesuai dengan halaman beranda Anda
       window.location.href = "/";
     }
   </script>
