--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         </div>
         
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="./404.html" class="btn btn-primary btn-project">
-            <i class="fas fa-cube"></i> Proyek 11
+          <a href="./11.kalkulator_resistor/kalkulator_resistor.html" class="btn btn-primary btn-project">
+            <i class="fas fa-cube"></i> Kalkulator Resistor
           </a>
         </div>
 
