--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="./404.html" class="btn btn-success btn-project">
-            <i class="fas fa-laptop-code"></i> Proyek 12
+          <a href="./12.android_kw/android_kw.html" class="btn btn-success btn-project">
+            <i class="fas fa-laptop-code"></i> Android KW
           </a>
         </div>
 
