--- a/12.android_kw/android_kw.html
+++ b/12.android_kw/android_kw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Android KW (Mobile Fit)</title>
+    <title>Menu Android KW (Ikon Berwarna)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -72,7 +72,8 @@
         .menu-card .card-icon {
             font-size: 3rem; /* Ukuran ikon lebih besar */
             margin-bottom: 10px;
-            color: #0d6efd; /* Warna ikon primary */
+            /* Warna ikon akan ditentukan secara dinamis oleh JS menggunakan kelas Bootstrap */
+            /* color: #0d6efd; <-- Hapus atau timpa ini jika ada */
         }
 
         .menu-card .card-title {
@@ -153,8 +154,14 @@
                 { title: 'Catatan', icon: 'bi-journal-text', link: '#' },
                 { title: 'Email', icon: 'bi-envelope-fill', link: '#' },
                 { title: 'File', icon: 'bi-folder-fill', link: '#' },
+                { title: 'Settings', icon: 'bi-gear-fill', link: '#' },
+                { title: 'Calculator', icon: 'bi-calculator-fill', link: '#' },
+                { title: 'Downloads', icon: 'bi-download', link: '#' },
                 // Tambahkan lebih banyak menu sesuai kebutuhan
             ];
+
+            // Palet warna Bootstrap yang akan digunakan
+            const colors = ['text-primary', 'text-success', 'text-info', 'text-warning', 'text-danger', 'text-dark'];
 
             const menuGrid = document.getElementById('menu-grid');
 
@@ -170,7 +177,9 @@
                 cardBody.className = 'card-body';
 
                 const icon = document.createElement('i');
-                icon.className = `bi ${item.icon} card-icon`;
+                // Pilih warna acak dari palet
+                const randomColorClass = colors[Math.floor(Math.random() * colors.length)];
+                icon.className = `bi ${item.icon} card-icon ${randomColorClass}`; // Tambahkan kelas warna
 
                 const title = document.createElement('h5');
                 title.className = 'card-title';
