--- a/12.android_kw/android_kw.html
+++ b/12.android_kw/android_kw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Android KW (Ikon Berwarna)</title>
+    <title>Menu Android KW (Ikon Tanpa Kotak)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -51,7 +51,9 @@
         /* Card Menu Items */
         .menu-card {
             border-radius: 10px; /* Sudut melengkung */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Bayangan yang lebih menonjol */
+            /* box-shadow: 0 4px 8px rgba(0,0,0,0.1); <-- Hapus atau ganti ini */
+            box-shadow: none; /* **PENTING: Menghilangkan bayangan sepenuhnya** */
+            background-color: transparent; /* Membuat latar belakang kartu transparan */
             transition: transform 0.2s ease-in-out;
             height: 150px; /* Tinggi kartu yang konsisten */
             display: flex;
@@ -66,14 +68,13 @@
 
         .menu-card:hover {
             transform: translateY(-5px); /* Efek angkat saat hover */
-            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+            /* box-shadow: 0 6px 12px rgba(0,0,0,0.15); <-- Hapus atau ganti ini */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.05); /* Sedikit bayangan saat hover agar tetap ada efek */
         }
 
         .menu-card .card-icon {
             font-size: 3rem; /* Ukuran ikon lebih besar */
             margin-bottom: 10px;
-            /* Warna ikon akan ditentukan secara dinamis oleh JS menggunakan kelas Bootstrap */
-            /* color: #0d6efd; <-- Hapus atau timpa ini jika ada */
         }
 
         .menu-card .card-title {
